--- a/contact.html
+++ b/contact.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Contact</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4271355408"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4253668388"/>
-  <link rel="stylesheet" type="text/css" href="css/contact.css?crc=138825697" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=145977327"/>
+  <link rel="stylesheet" type="text/css" href="css/contact.css?crc=195556205" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=203893040"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_contact.css?crc=4100928545" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3937669196"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_contact.css?crc=110609891" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
   <!--[if lt IE 9]>
@@ -35,8 +35,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="clearfix borderbox" id="page"><!-- group -->
     <div class="clearfix grpelem" id="pu94"><!-- column -->
      <div class="clearfix colelem shared_content" id="u94" data-content-guid="u94_content"><!-- group -->
-      <div class="clearfix grpelem shared_content" id="u154-4" data-content-guid="u154-4_content"><!-- content -->
-       <p id="u154-2">LIU CONSULTING, LLC</p>
+      <div class="clearfix grpelem shared_content" id="u154-5" data-content-guid="u154-5_content"><!-- content -->
+       <p id="u154-3"><span id="u154">LIU CONSULTING LLC </span><span id="u154-2">®</span></p>
       </div>
      </div>
      <nav class="MenuBar clearfix colelem" id="menuu157" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter"><!-- horizontal box -->
@@ -55,18 +55,17 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <p>Liu Consulting LLC</p>
       </div>
      </div>
-     <div class="clearfix colelem shared_content" id="u1205-27" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-content-guid="u1205-27_content"><!-- content -->
+     <div class="clearfix colelem shared_content" id="u1205-21" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-content-guid="u1205-21_content"><!-- content -->
       <p id="u1205-2">President, Harry Liu</p>
       <p id="u1205-3">&nbsp;</p>
       <p id="u1205-5">Phone: +1 407.867.8858</p>
       <p id="u1205-6">&nbsp;</p>
-      <p id="u1205-8">Email (please send to both emails):</p>
-      <p id="u1205-12">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a class="nonblock" href="mailto:harry@liuconsulting.net">harry@liuconsulting.net</a></p>
-      <p id="u1205-17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a class="nonblock" href="mailto:harryliu866@gmail.com">harryliu866@gmail.com</a></p>
-      <p id="u1205-18">&nbsp;</p>
-      <p id="u1205-22">Website: <a class="nonblock" href="http://www.liuconsulting.net">www.liuconsulting.net</a></p>
-      <p id="u1205-23">&nbsp;</p>
-      <p id="u1205-25">WeChat ID: H89688</p>
+      <p id="u1205-8">Email:</p>
+      <p id="u1205-11"><a class="nonblock" href="mailto:harry@liuconsulting.net">harry@liuconsulting.net</a></p>
+      <p id="u1205-12">&nbsp;</p>
+      <p id="u1205-16">Website: <a class="nonblock" href="https://liuconsulting.net">liuconsulting.net</a></p>
+      <p id="u1205-17">&nbsp;</p>
+      <p id="u1205-19">WeChat ID: H89688</p>
      </div>
      <div class="browser_width colelem shared_content" id="u1211-bw" data-content-guid="u1211-bw_content">
       <div id="u1211"><!-- simple frame --></div>
@@ -85,7 +84,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div id="u1144"><!-- simple frame --></div>
      </div>
     </div>
-    <div class="verticalspacer shared_content" data-offset-top="1170" data-content-above-spacer="1169" data-content-below-spacer="229" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="page_1_content"></div>
+    <div class="verticalspacer" data-offset-top="1148" data-content-above-spacer="1147" data-content-below-spacer="249" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem shared_content" id="pu106" data-content-guid="pu106_content"><!-- group -->
      <div class="browser_width grpelem" id="u106-bw">
       <div id="u106"><!-- group -->
@@ -152,13 +151,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </nav>
      <span class="browser_width colelem placeholder" data-placeholder-for="u1208-4-bw_content"><!-- placeholder node --></span>
-     <span class="clearfix colelem placeholder" data-placeholder-for="u1205-27_content"><!-- placeholder node --></span>
+     <span class="clearfix colelem placeholder" data-placeholder-for="u1205-21_content"><!-- placeholder node --></span>
      <span class="browser_width colelem placeholder" data-placeholder-for="u1211-bw_content"><!-- placeholder node --></span>
      <span class="browser_width colelem placeholder" data-placeholder-for="u1192-4-bw_content"><!-- placeholder node --></span>
      <span class="size_fixed colelem placeholder" data-placeholder-for="u1184_content"><!-- placeholder node --></span>
      <span class="browser_width colelem placeholder" data-placeholder-for="u1144-bw_content"><!-- placeholder node --></span>
     </div>
-    <span class="verticalspacer placeholder" data-placeholder-for="page_1_content"><!-- placeholder node --></span>
+    <div class="verticalspacer" data-offset-top="1148" data-content-above-spacer="1147" data-content-below-spacer="250" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <span class="clearfix grpelem placeholder" data-placeholder-for="pu106_content"><!-- placeholder node --></span>
    </div>
   </div>
@@ -169,8 +168,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="browser_width grpelem" id="u94-bw">
        <div class="temp_no_id" data-orig-id="u94"><!-- simple frame --></div>
       </div>
-      <div class="browser_width grpelem" id="u154-4-bw">
-       <span class="clearfix placeholder" data-placeholder-for="u154-4_content"><!-- placeholder node --></span>
+      <div class="browser_width grpelem" id="u154-5-bw">
+       <span class="clearfix placeholder" data-placeholder-for="u154-5_content"><!-- placeholder node --></span>
       </div>
      </div>
      <div class="browser_width colelem" id="menuu157-bw">
@@ -187,17 +186,18 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </nav>
      </div>
      <span class="browser_width colelem placeholder" data-placeholder-for="u1208-4-bw_content"><!-- placeholder node --></span>
-     <span class="clearfix colelem placeholder" data-placeholder-for="u1205-27_content"><!-- placeholder node --></span>
+     <span class="clearfix colelem placeholder" data-placeholder-for="u1205-21_content"><!-- placeholder node --></span>
      <span class="browser_width colelem placeholder" data-placeholder-for="u1211-bw_content"><!-- placeholder node --></span>
      <span class="browser_width colelem placeholder" data-placeholder-for="u1192-4-bw_content"><!-- placeholder node --></span>
      <span class="size_fixed colelem placeholder" data-placeholder-for="u1184_content"><!-- placeholder node --></span>
      <span class="browser_width colelem placeholder" data-placeholder-for="u1144-bw_content"><!-- placeholder node --></span>
     </div>
-    <span class="verticalspacer placeholder" data-placeholder-for="page_1_content"><!-- placeholder node --></span>
+    <div class="verticalspacer" data-offset-top="1148" data-content-above-spacer="1147" data-content-below-spacer="202" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem temp_no_id shared_content" data-orig-id="pu106" data-content-guid="pu106_content1"><!-- group -->
      <div class="browser_width grpelem temp_no_id" data-orig-id="u106-bw">
       <div class="temp_no_id" data-orig-id="u106"><!-- group -->
        <div class="clearfix temp_no_id" data-orig-id="u106_align_to_page">
+        <span class="clearfix grpelem placeholder" data-placeholder-for="u2592_content"><!-- placeholder node --></span>
         <div class="clearfix grpelem temp_no_id" data-orig-id="pu112"><!-- group -->
          <span class="grpelem placeholder" data-placeholder-for="u112_content"><!-- placeholder node --></span>
          <span class="clearfix grpelem placeholder" data-placeholder-for="u148-4_content"><!-- placeholder node --></span>
@@ -217,7 +217,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
      <span class="browser_width grpelem placeholder" data-placeholder-for="u145-4-bw_content"><!-- placeholder node --></span>
-     <span class="clearfix grpelem placeholder" data-placeholder-for="u2592_content"><!-- placeholder node --></span>
     </div>
    </div>
   </div>
@@ -239,8 +238,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </nav>
      </div>
      <span class="browser_width colelem placeholder" data-placeholder-for="u1208-4-bw_content"><!-- placeholder node --></span>
-     <div class="browser_width colelem" id="u1205-27-bw">
-      <span class="clearfix placeholder" data-placeholder-for="u1205-27_content"><!-- placeholder node --></span>
+     <div class="browser_width colelem" id="u1205-21-bw">
+      <span class="clearfix placeholder" data-placeholder-for="u1205-21_content"><!-- placeholder node --></span>
      </div>
      <span class="browser_width colelem placeholder" data-placeholder-for="u1211-bw_content"><!-- placeholder node --></span>
      <span class="browser_width colelem placeholder" data-placeholder-for="u1192-4-bw_content"><!-- placeholder node --></span>
@@ -249,7 +248,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <span class="browser_width colelem placeholder" data-placeholder-for="u1144-bw_content"><!-- placeholder node --></span>
     </div>
-    <div class="verticalspacer" data-offset-top="1055" data-content-above-spacer="1055" data-content-below-spacer="229" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="1055" data-content-above-spacer="1055" data-content-below-spacer="202" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <span class="clearfix grpelem placeholder" data-placeholder-for="pu106_content1"><!-- placeholder node --></span>
    </div>
   </div>
