--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ document.documentElement.className = document.documentElement.className.replace(
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "jquery.musepolyfill.bgsize.js", "jquery.museresponsive.js", "require.js", "index.css"], "outOfDate":[]};
 </script>
   
-  <title>Liu Consulting</title>
+  <title>Liu Consulting | Orlando, Florida</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4271355408"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=145977327"/>
