--- a/business.html
+++ b/business.html
@@ -202,7 +202,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          </div>
          <a class="nonblock nontext transition clearfix grpelem" id="u1181-4" href="http://www.worldtradecenterorlando.org/"><!-- content --><p id="u1181-2">World Trade Center Orlando</p></a>
          <a class="nonblock nontext transition clearfix grpelem" id="u1225-4" href="http://www.cutic.org/index.html"><!-- content --><p id="u1225-2">China US Technology Innovation Center</p></a>
-         <a class="nonblock nontext transition clearfix grpelem" id="u5897-4" href="https://www.wtca.org/"><!-- content --><p id="u5897-2">World Trade Centers Association</p></a>
+         <a class="nonblock nontext transition clearfix grpelem" id="u5897-4" href="http://cpscup.com/"><!-- content --><p id="u5897-2">Cross Pacific Studies</p></a>
          <a class="nonblock nontext transition clearfix grpelem" id="u6012-4" href="http://asianamericanchambercfl.org/"><!-- content --><p id="u6012-2">Asian American Chamber of Commerce</p></a>
         </div>
         <div class="clearfix grpelem" id="pu2582"><!-- group -->
