--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <span class="grpelem placeholder" data-placeholder-for="u112_content"><!-- placeholder node --></span>
          <span class="clearfix grpelem placeholder" data-placeholder-for="u148-4_content"><!-- placeholder node --></span>
          <a class="nonblock nontext clearfix grpelem" id="u6307-4" href="http://www.worldtradecenterorlando.org/"><!-- content --><p id="u6307-2">WTC Orlando</p></a>
-         <a class="nonblock nontext clearfix grpelem" id="u6313-4" href="https://www.wtca.org/"><!-- content --><p id="u6313-2">WTC Association</p></a>
+         <a class="nonblock nontext clearfix grpelem" id="u6313-4" href="http://cpscup.com/"><!-- content --><p id="u6313-2">Cross Pacific Studies</p></a>
          <a class="nonblock nontext clearfix grpelem" id="u6325-4" href="http://www.cutic.org/index.html"><!-- content --><p id="u6325-2">CUTIC</p></a>
          <a class="nonblock nontext clearfix grpelem" id="u6337-4" href="http://asianamericanchambercfl.org/"><!-- content --><p id="u6337-2">AACC</p></a>
         </div>
