--- a/business.html
+++ b/business.html
@@ -202,7 +202,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          </div>
          <a class="nonblock nontext transition clearfix grpelem" id="u1181-4" href="http://www.worldtradecenterorlando.org/"><!-- content --><p id="u1181-2">World Trade Center Orlando</p></a>
          <a class="nonblock nontext transition clearfix grpelem" id="u1225-4" href="http://www.cutic.org/index.html"><!-- content --><p id="u1225-2">China US Technology Innovation Center</p></a>
-         <a class="nonblock nontext transition clearfix grpelem" id="u5897-4" href="http://cpscup.com/"><!-- content --><p id="u5897-2">Cross Pacific Studies</p></a>
+         <a class="nonblock nontext transition clearfix grpelem" id="u5897-4" href="http://cpscup.com/"><!-- content --><p id="u5897-2">CPS EDU</p></a>
          <a class="nonblock nontext transition clearfix grpelem" id="u6012-4" href="http://asianamericanchambercfl.org/"><!-- content --><p id="u6012-2">Asian American Chamber of Commerce</p></a>
         </div>
         <div class="clearfix grpelem" id="pu2582"><!-- group -->
@@ -519,7 +519,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <span class="grpelem placeholder" data-placeholder-for="u112_content"><!-- placeholder node --></span>
          <span class="clearfix grpelem placeholder" data-placeholder-for="u148-4_content"><!-- placeholder node --></span>
          <a class="nonblock nontext clearfix grpelem" id="u6307-4" href="http://www.worldtradecenterorlando.org/"><!-- content --><p id="u6307-2">WTC Orlando</p></a>
-         <a class="nonblock nontext clearfix grpelem" id="u6313-4" href="http://cpscup.com/"><!-- content --><p id="u6313-2">Cross Pacific Studies</p></a>
+         <a class="nonblock nontext clearfix grpelem" id="u6313-4" href="http://cpscup.com/"><!-- content --><p id="u6313-2">Cross Pacific Studies Education</p></a>
          <a class="nonblock nontext clearfix grpelem" id="u6325-4" href="http://www.cutic.org/index.html"><!-- content --><p id="u6325-2">CUTIC</p></a>
          <a class="nonblock nontext clearfix grpelem" id="u6337-4" href="http://asianamericanchambercfl.org/"><!-- content --><p id="u6337-2">AACC</p></a>
         </div>
